<resources>
    <string name="app_name">VoiceSearchASTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="radio_btn_google">Google</string>
    <string name="radio_btn_xunfei">XunFei</string>
    <string name="speak_btn_title">Speak</string>
    <string name="voice_type_erro">Not support voice type</string>
    <string name="preference_key_iat_engine">iat_engine</string>
    <string name="preference_default_iat_engine">sms</string>
    <string name="preference_default_poi_province">全选</string>
    <string name="preference_key_poi_province">poi_province</string>
    <string name="preference_default_poi_city">全选</string>
    <string name="preference_key_poi_city">poi_city</string>
    <string name="preference_key_iat_rate">iat_rate</string>
    <string name="preference_default_iat_rate">rate16k</string>
    <string name="app_id">4e79f83e</string>
    <string name="en_US_action_call_contact">Call</string>
    <string name="en_US_action_call_number">Call</string>
    <string name="en_US_action_call_business">Call</string>
    <string name="en_US_action_navigate_to">Navigate to</string>
    <string name="en_US_action_directions_to">Directions to</string>
    <string name="en_US_action_map_of">Map of</string>
    <string name="en_US_action_post_buzz">Post buzz</string>
    <string name="en_US_action_send_email">Send email</string>
    <string name="en_US_action_send_sms">Send text</string>
    <string name="en_US_action_set_alarm">Set alarm</string>
    <string name="en_US_action_note_to_self">Note to self</string>
    <string name="en_US_action_go_to">Go to</string>
    <string name="en_US_action_listen_to">Listen to</string>
    <string name="en_US_hint_call_contact"><annotation action="true">call</annotation> john smith at home</string>
    <string name="en_US_hint_call_business"><annotation action="true">call</annotation>" johnny's pizzeria"</string>
    <string name="en_US_hint_navigate_to"><annotation action="true">navigate to</annotation>" mike's bikes"</string>
    <string name="en_US_hint_directions_to"><annotation action="true">directions to</annotation> 123 main st</string>
    <string name="en_US_hint_map_of"><annotation action="true">map of</annotation> gas stations</string>
    <string name="en_US_hint_post_buzz"><annotation action="true">post buzz</annotation> sunny day at the park!</string>
    <string name="en_US_hint_send_email"><annotation action="true">send email</annotation> to jane smith</string>
    <string name="en_US_hint_send_sms"><annotation action="true">send text</annotation> to john smith</string>
    <string name="en_US_hint_set_alarm"><annotation action="true">set alarm</annotation> for 8:30 am</string>
    <string name="en_US_hint_note_to_self"><annotation action="true">note to self</annotation> do the laundry</string>
    <string name="en_US_hint_go_to"><annotation action="true">go to</annotation> wikipedia</string>
    <string name="en_US_hint_listen_to"><annotation action="true">listen to</annotation> beethoven</string>
    <string name="en_US_long_hint_send_email"><annotation action="true">send email</annotation>" to jane smith
... dinner tonight?"</string>
    <string name="en_US_long_hint_send_sms"><annotation action="true">send text</annotation>" to john smith
... running a bit late!"</string>
    <string name="en_US_long_hint_directions_to"><annotation action="true">directions to</annotation> 123 main street</string>
    <string name="en_US_slot_multislot_from">from</string>
    <string name="en_US_slot_send_email_to">to</string>
    <string name="en_US_slot_send_email_cc">cc</string>
    <string name="en_US_slot_send_email_bcc">bcc</string>
    <string name="en_US_slot_send_email_subject">subject</string>
    <string name="en_US_slot_send_email_message">message</string>
    <string name="en_US_slot_note_to_self_to">to</string>
    <string name="en_US_slot_note_to_self_cc">cc</string>
    <string name="en_US_slot_note_to_self_bcc">bcc</string>
    <string name="en_US_slot_note_to_self_subject">subject</string>
    <string name="en_US_slot_note_to_self_message">message</string>
    <string name="en_US_slot_send_sms_to">to</string>
    <string name="en_US_slot_send_sms_message">message</string>
    <string name="en_US_slot_set_alarm_time">time</string>
    <string name="en_US_slot_set_alarm_label">label</string>
    <string name="en_CA_action_call_contact">Call</string>
    <string name="en_CA_action_call_number">Call</string>
    <string name="en_CA_action_call_business">Call</string>
    <string name="en_CA_action_navigate_to">Navigate to</string>
    <string name="en_CA_action_directions_to">Directions to</string>
    <string name="en_CA_action_map_of">Map of</string>
    <string name="en_CA_action_post_buzz">Post buzz</string>
    <string name="en_CA_action_send_email">Send email</string>
    <string name="en_CA_action_send_sms">Send text</string>
    <string name="en_CA_action_set_alarm">Set alarm</string>
    <string name="en_CA_action_note_to_self">Note to self</string>
    <string name="en_CA_action_go_to">Go to</string>
    <string name="en_CA_action_listen_to">Listen to</string>
    <string name="en_CA_hint_call_contact"><annotation action="true">call</annotation> john smith at home</string>
    <string name="en_CA_hint_call_business"><annotation action="true">call</annotation>" johnny's pizzeria"</string>
    <string name="en_CA_hint_navigate_to"><annotation action="true">navigate to</annotation>" mike's bikes"</string>
    <string name="en_CA_hint_directions_to"><annotation action="true">directions to</annotation> 123 main st</string>
    <string name="en_CA_hint_map_of"><annotation action="true">map of</annotation> gas stations</string>
    <string name="en_CA_hint_post_buzz"><annotation action="true">post buzz</annotation> sunny day at the park!</string>
    <string name="en_CA_hint_send_email"><annotation action="true">send email</annotation> to jane smith</string>
    <string name="en_CA_hint_send_sms"><annotation action="true">send text</annotation> to john smith</string>
    <string name="en_CA_hint_set_alarm"><annotation action="true">set alarm</annotation> for 8:30 am</string>
    <string name="en_CA_hint_note_to_self"><annotation action="true">note to self</annotation> do the laundry</string>
    <string name="en_CA_hint_go_to"><annotation action="true">go to</annotation> wikipedia</string>
    <string name="en_CA_hint_listen_to"><annotation action="true">listen to</annotation> beethoven</string>
    <string name="en_CA_long_hint_send_email"><annotation action="true">send email</annotation>" to jane smith
... dinner tonight?"</string>
    <string name="en_CA_long_hint_send_sms"><annotation action="true">send text</annotation>" to john smith
... running a bit late!"</string>
    <string name="en_CA_long_hint_directions_to"><annotation action="true">directions to</annotation> 123 main street</string>
    <string name="en_CA_slot_multislot_from">from</string>
    <string name="en_CA_slot_send_email_to">to</string>
    <string name="en_CA_slot_send_email_cc">cc</string>
    <string name="en_CA_slot_send_email_bcc">bcc</string>
    <string name="en_CA_slot_send_email_subject">subject</string>
    <string name="en_CA_slot_send_email_message">message</string>
    <string name="en_CA_slot_note_to_self_to">to</string>
    <string name="en_CA_slot_note_to_self_cc">cc</string>
    <string name="en_CA_slot_note_to_self_bcc">bcc</string>
    <string name="en_CA_slot_note_to_self_subject">subject</string>
    <string name="en_CA_slot_note_to_self_message">message</string>
    <string name="en_CA_slot_send_sms_to">to</string>
    <string name="en_CA_slot_send_sms_message">message</string>
    <string name="en_CA_slot_set_alarm_time">time</string>
    <string name="en_CA_slot_set_alarm_label">label</string>
    <string name="en_GB_action_call_contact">Call</string>
    <string name="en_GB_action_call_number">Call</string>
    <string name="en_GB_action_call_business">Call</string>
    <string name="en_GB_action_navigate_to">Navigate to</string>
    <string name="en_GB_action_directions_to">Directions to</string>
    <string name="en_GB_action_map_of">Map of</string>
    <string name="en_GB_action_post_buzz">Post buzz</string>
    <string name="en_GB_action_send_email">Send email</string>
    <string name="en_GB_action_send_sms">Send text</string>
    <string name="en_GB_action_set_alarm">Set alarm</string>
    <string name="en_GB_action_note_to_self">Note to self</string>
    <string name="en_GB_action_go_to">Go to</string>
    <string name="en_GB_action_listen_to">Listen to</string>
    <string name="en_GB_hint_call_contact"><annotation action="true">call</annotation> john smith at home</string>
    <string name="en_GB_hint_call_business"><annotation action="true">call</annotation>" johnny's pizzeria"</string>
    <string name="en_GB_hint_navigate_to"><annotation action="true">navigate to</annotation>" mike's bikes"</string>
    <string name="en_GB_hint_directions_to"><annotation action="true">directions to</annotation> 123 main st</string>
    <string name="en_GB_hint_map_of"><annotation action="true">map of</annotation> petrol stations</string>
    <string name="en_GB_hint_post_buzz"><annotation action="true">post buzz</annotation> sunny day at the park!</string>
    <string name="en_GB_hint_send_email"><annotation action="true">send email</annotation> to jane smith</string>
    <string name="en_GB_hint_send_sms"><annotation action="true">send text</annotation> to john smith</string>
    <string name="en_GB_hint_set_alarm"><annotation action="true">set alarm</annotation> for 8:30 am</string>
    <string name="en_GB_hint_note_to_self"><annotation action="true">note to self</annotation> do the laundry</string>
    <string name="en_GB_hint_go_to"><annotation action="true">go to</annotation> wikipedia</string>
    <string name="en_GB_hint_listen_to"><annotation action="true">listen to</annotation> beethoven</string>
    <string name="en_GB_long_hint_send_email"><annotation action="true">send email</annotation>" to jane smith
... dinner tonight?"</string>
    <string name="en_GB_long_hint_send_sms"><annotation action="true">send text</annotation>" to john smith
... running a bit late!"</string>
    <string name="en_GB_long_hint_directions_to"><annotation action="true">directions to</annotation> 123 main street</string>
    <string name="en_GB_slot_multislot_from">from</string>
    <string name="en_GB_slot_send_email_to">to</string>
    <string name="personalization_header">Personalized recognition</string>
    <string name="personalization_settings_message">Improve speech recognition accuracy.</string>
    <string name="manage_personalization">Google Account dashboard</string>
    <string name="manage_personalization_message">Manage your collected data</string>
    <string name="help">Help</string>
    <string name="help_hint">Touch <b>Help</b> to learn what you can say</string>
    <string name="help_header">Try saying...</string>
    <string name="did_you_mean">Did you mean...</string>
    <string name="tryagain">Speak again</string>
    <string name="speak_now">Speak now</string>
    <string name="voiceSearchPreferences">Google voice recognition settings</string>
    <string name="prefTitle_language">Language</string>
    <string name="prefDialogTitle_language">Language</string>
    <string name="prefTitle_safeSearch">SafeSearch</string>
    <string name="prefDefault_safeSearch">moderate</string>
    <string name="prefDialogTitle_safeSearch">SafeSearch</string>
    <string name="prefTitle_profanityFilter">Block offensive words</string>
    <string name="prefSummary_profanityFilter">Hide recognized offensive voice results</string>
    <string name="cancel">Cancel</string>
    <string name="help_watch_video_capitalized">Watch a video</string>
    <string name="show_hints_on_search">Show hints on search box</string>
</resources>