<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/recognition_dialog_body" android:background="@drawable/vs_dialog_red" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="319.0dip" android:layout_height="265.0dip" android:layout_weight="1.0">
        <TextView android:textSize="28.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/text" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:singleLine="true" />
        <RelativeLayout android:id="@id/center_image_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:layout_weight="1.0">
            <ImageView android:id="@id/image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
            <com.google.android.voicesearch.actioneditor.SoundIndicator android:id="@id/mic_level_meter" android:background="@drawable/mic_base" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/mic_full" android:adjustViewBounds="true" android:layout_centerInParent="true" />
        </RelativeLayout>
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/google_watermark" />
        <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="top|center" android:id="@id/branding_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lines="2" />
        <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="top|center" android:id="@id/language_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-3.0dip" />
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <Button android:textSize="20.0sp" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@id/try_again_button" android:background="@drawable/btn_left" android:focusable="true" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_marginLeft="0.0dip" android:text="@string/tryagain" android:singleLine="true" android:layout_weight="0.5" />
            <Button android:textSize="20.0sp" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@id/help_button" android:background="@drawable/btn_left" android:focusable="true" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_marginLeft="0.0dip" android:text="@string/help" android:singleLine="true" android:layout_weight="0.5" />
            <Button android:textSize="20.0sp" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@id/cancel_button" android:background="@drawable/btn_center" android:focusable="true" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_marginRight="0.0dip" android:text="@string/cancel" android:singleLine="true" android:layout_weight="0.5" />
        </LinearLayout>
    </LinearLayout>
    <Button android:textColor="@color/white" android:id="@id/help_hint_bubble" android:background="@drawable/vs_dialog_hintbubble" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-15.0dip" android:text="@string/help_hint" />
</merge>
